<resources>
    <!-- REST API Server URLs -->
    <string name="server_ip">143.248.90.57</string> <!-- SR PC IP: 165.246.43.97 -->
    <string name="url_server">http://%1$s/server.php</string>

    <string name="app_name">FocusMore</string>
    <string name="action_settings">Settings</string>
    <string name="dummy">dummy</string>
    <string name="question_location">현재 장소는 어디 입니까?</string>
    <string name="question_activity">기록된 시간 동안 주로 무슨 활동을 했습니까?</string>
    <string name="question_1">기록된 시간 동안의 집중 상태는 어떠했습니까?</string>
    <string name="question_2">기록된 시간 동안, 집중을 해야 한다고 생각하십니까?</string>
    <string name="question_3">선택한 활동과 관련 없는 스마트폰 사용은 기록된 활동을 얼마나 방해합니까?</string>
    <string name="question_4">지금 스마트폰을 사용하려고 한다면, 사용 목적은 무엇입니까?(옵션)</string>
    <string name="hint_question_4">입력해 주세요 (예: ~하는 중에 ~하기 위해서)</string>
    <string name="question_disturbance">스마트폰 사용은 기록된 시간 동안의 활동을 방해한다고 생각하십니까?</string>
    <string name="seekbar_val_1_1">매우 낮음</string>
    <string name="seekbar_val_1_2">낮음</string>
    <string name="seekbar_val_1_3">보통</string>
    <string name="seekbar_val_1_4">높음</string>
    <string name="seekbar_val_1_5">매우 높음</string>
    <string name="seekbar_val_2_1">전혀 그렇지 않다</string>
    <string name="seekbar_val_2_2">그렇지 않다</string>
    <string name="seekbar_val_2_3">보통</string>
    <string name="seekbar_val_2_4">그렇다</string>
    <string name="seekbar_val_2_5">매우 그렇다</string>
    <string name="seekbar_val_3_1">전혀 방해하지 않음</string>
    <string name="seekbar_val_3_2">약간 방해</string>
    <string name="seekbar_val_3_3">보통</string>
    <string name="seekbar_val_3_4">방해</string>
    <string name="seekbar_val_3_5">매우 방해</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="save">확인</string>
    <string name="update">Update</string>
    <string name="cancel">취소</string>
    <string name="choose_icon">Choose icon:</string>
    <string name="title_activity_location___summary">Location_Activity_Summary</string>
    <string name="prev_day">previous day</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="next_day">next day</string>
    <string name="summary">Summary</string>
    <string name="detailed">Detailed</string>
    <string name="day">day</string>
    <string name="date">date</string>
    <string name="accumulated_time">accumulated time</string>
    <string name="no_data">No data on this date</string>
    <string name="recorded_static_activity">기록된 정적인 활동</string>
    <string name="activity">활동</string>
    <string name="plcae">장소</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="time">time</string>
    <string name="duration">Duration</string>
    <string name="icon">icon</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="etc">ETC</string>
    <string name="history_esm">history (ESM)</string>
    <string name="db_reinit">DB re-init</string>

    <string name="seconds">초</string>
    <string name="min">분</string>
    <string name="hours">시간</string>
    <string name="log_out">log out</string>
    <string name="service_restart">Service restart</string>
    <string name="srv_is_running">Service is running :)</string>
    <string name="srv_is_not_running">Service is not running :(</string>
    <string name="after_timer_text">동안 현재 자리에서 스마트폰을 사용하지 않았습니다</string>
    <string name="later">나중에</string>


</resources>
