<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/detailed_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/time"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/icon_activity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/detailed_view_time"
        android:layout_centerVertical="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/icon_location_home" />

    <TextView
        android:id="@+id/text_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toEndOf="@id/icon_activity"
        android:layout_centerVertical="true"
        android:text="@string/dummy"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/detailed_view_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/icon_location_home" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/dummy"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <ImageView
            android:visibility="gone"
            android:id="@id/edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_edit" />
    </LinearLayout>



    <TextView
        android:id="@+id/activity_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/duration"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/black"/>

</RelativeLayout>